# bi-platform

./: .env.example  .gitignore  CODEBASE_INVENTORY.md  DASHBOARD_SHARING_GUIDE.md  DATA_CLEANING_GUIDE.md  DATA_MODELING_GUIDE.md  DETAIL_MODULES.md  IMPLEMENTATION_STATUS.md  QUICK_START.md  RAPPORT_AVANCEMENT.md  README.md  RESUME_EXECUTIF.md  SESSION_REPORT_COMPLETE.md  check_datasets.py  diagnose_output.txt  docker-compose.yml  orders.csv  package.json  pnpm-lock.yaml  test_chart_multidim.py  test_data.csv
apps/api/: Dockerfile  add_enum_values.py  add_message_column.py  alembic.ini  check_and_fix_enums.py  check_auth.py  check_dashboard_charts.py  check_openapi.py  check_user_hash.py  create_demo_user.py  diagnose_users.py  fix_enum_case.py  fix_enum_raw.py  fix_password.py  list_all_paths.py  pyproject.toml  reset_full.py  reset_migration.py  reset_password.py  setup_login.py  test_endpoint.py  test_endpoint_direct.py  test_get_datasets.py  test_preview.py  test_verify_fix.py  update_demo_password.py  verify_migration.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3f15f0a8763f_merge_concurrent_migration_branches.py  a6a7a3657b13_initial_migration.py  add_transformations_and_features.py  b8c9d0e1f2a3_add_database_source_to_datasets.py  c4d5e6f7a8b9_add_active_db_connection_to_users.py  ca493cd501f4_add_data_modeling_tables.py  d1e2f3a4b5c6_add_active_db_query_history_to_users.py  e7f8c2d3b4a5_migrate_shares_to_granular_permissions.py  f9e4c5d2a1b6_add_xls_to_filetype_enum.py  g1h2i3j4k5l6_add_new_chart_types.py  (+2 more)
apps/api/app/: main.py
(+167 files in other folders)
